add booklist transaction

--- a/BG_IMPACT/appsettings.json
+++ b/BG_IMPACT/appsettings.json
@@ -17,6 +17,9 @@
     "CloudName": "dh8gc9kkz",
     "ApiKey": "263348671614758",
     "ApiSecret": "nLuO9xNDR8RoJ4wUx3zfiYPABLU"
+  },
+  "Domain": {
+    "Localhost": "http://https://localhost:44316"
   }
 
 }
