--- a/BG_IMPACT/BG_IMPACT.csproj
+++ b/BG_IMPACT/BG_IMPACT.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Command\Dashboard\Commands\" />
     <Folder Include="Command\Login\Queries\" />
   </ItemGroup>
 
