add controller/repository/command for bookitem,orderitem

--- a/BG_IMPACT/BG_IMPACT.csproj
+++ b/BG_IMPACT/BG_IMPACT.csproj
@@ -24,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Command\BookItem\Queries\" />
     <Folder Include="Command\Login\Queries\" />
+    <Folder Include="Command\OrderItem\Queries\" />
   </ItemGroup>
 
 </Project>
