--- a/BG_IMPACT.Business/BG_IMPACT.Business.csproj
+++ b/BG_IMPACT.Business/BG_IMPACT.Business.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+	  <PackageReference Include="payOS" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
