--- a/BG_IMPACT/appsettings.json
+++ b/BG_IMPACT/appsettings.json
@@ -20,6 +20,10 @@
   },
   "Domain": {
     "Localhost": "http://https://localhost:44316"
+  },
+  "Admin": {
+    "ID": "7f15f6f0-2cdf-4810-be9f-47ce87b6a4a0",
+    "Username": "admin1st",
+    "Password": "admin1st"
   }
-
 }
