fix Cancel Consignment

--- a/BG_IMPACT/appsettings.json
+++ b/BG_IMPACT/appsettings.json
@@ -25,5 +25,15 @@
     "ID": "7f15f6f0-2cdf-4810-be9f-47ce87b6a4a0",
     "Username": "admin1st",
     "Password": "admin1st"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.yourprovider.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "your-email@domain.com",
+    "SmtpPassword": "your-email-password",
+    "FromName": "Your Company Name",
+    "FromAddress": "noreply@yourdomain.com"
   }
+
 }
