--- a/BG_IMPACT/appsettings.json
+++ b/BG_IMPACT/appsettings.json
@@ -30,10 +30,10 @@
   "EmailSettings": {
     "SmtpServer": "smtp.yourprovider.com",
     "SmtpPort": 587,
-    "SmtpUsername": "your-email@domain.com",
-    "SmtpPassword": "your-email-password",
-    "FromName": "Your Company Name",
-    "FromAddress": "noreply@yourdomain.com"
+    "SmtpUsername": "bgimpact.sup@gmail.com",
+    "SmtpPassword": "boardgame@12345",
+    "FromName": "BOARD GAME IMPACT",
+    "FromAddress": "https://bgame-fe.vercel.app/"
   }
 
 }
