--- a/BG_IMPACT.DTO/BG_IMPACT.DTO.csproj
+++ b/BG_IMPACT.DTO/BG_IMPACT.DTO.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+  </ItemGroup>
+
 </Project>
