--- a/BG_IMPACT.Business/BG_IMPACT.Business.csproj
+++ b/BG_IMPACT.Business/BG_IMPACT.Business.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Command\SupplyItem\Commands\" />
     <Folder Include="Command\SupplyItem\Queries\" />
     <Folder Include="Command\SupplyOrder\Queries\" />
+    <Folder Include="Command\Transaction\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
