--- a/BG_IMPACT/appsettings.json
+++ b/BG_IMPACT/appsettings.json
@@ -28,10 +28,10 @@
   },
 
   "EmailSettings": {
-    "SmtpServer": "smtp.yourprovider.com",
+    "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
     "SmtpUsername": "bgimpact.sup@gmail.com",
-    "SmtpPassword": "boardgame@12345",
+    "SmtpPassword": "ybje iszt gief kagg",
     "FromName": "BOARD GAME IMPACT",
     "FromAddress": "https://bgame-fe.vercel.app/"
   }
