fix project reference

--- a/BG_IMPACT.Test/BG_IMPACT.Test.csproj
+++ b/BG_IMPACT.Test/BG_IMPACT.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BG_IMPACT.Business\BG_IMPACT.Business.csproj" />
+    <ProjectReference Include="..\BG_IMPACT\BG_IMPACT.csproj" />
   </ItemGroup>
 
   <ItemGroup>
