fix all namespace

--- a/BG_IMPACT/BG_IMPACT.csproj
+++ b/BG_IMPACT/BG_IMPACT.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\BG_IMPACT.Business\BG_IMPACT.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
