--- a/BG_IMPACT.Business/BG_IMPACT.Business.csproj
+++ b/BG_IMPACT.Business/BG_IMPACT.Business.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Folder Include="Command\BookItem\Queries\" />
+    <Folder Include="Command\BookTable\Queries\" />
     <Folder Include="Command\Dashboard\Commands\" />
     <Folder Include="Command\Email\Queries\" />
     <Folder Include="Command\Login\Queries\" />
