--- a/BG_IMPACT.DTO/BG_IMPACT.DTO.csproj
+++ b/BG_IMPACT.DTO/BG_IMPACT.DTO.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+    <PackageReference Include="TimeZoneConverter" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
