--- a/BG_IMPACT.Infrastructure/BG_IMPACT.Infrastructure.csproj
+++ b/BG_IMPACT.Infrastructure/BG_IMPACT.Infrastructure.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+	  <PackageReference Include="Quartz" Version="3.15.0" />
+	  <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.15.0" />
+	  <PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
